2016-10-22  Mark Ellis  <mark@mpellis.org.uk>

	* add dbus properties for static device properties
	* remove support for odccm
	* SynceDevice does not need to implement failable initialization
	* create _new functions for SynceConnectionBroker, DeviceLegacy,
	  DeviceRndis, DeviceManager, DeviceManagerControl
	* implement async initialisation for DeviceManager,
	  DeviceManagerControl
	* use gio functions for socket transfer of file descriptors
	  for ease of maintenance
	* improve process of establishing initial connection in
	  DeviceManager

2016-10-10  Mark Ellis  <mark@mpellis.org.uk>

	* consolidate udev device disconnect process into device manager,
	  rather than the device object, since it is possible to receive
	  a disconnect on a device that does not have a full device object
	* add a documentation page explaining the device connection process
	* drop the ability to fall back to dbus-glib if the build cannot
	  find GDBus, and simply require the GIO with dbus support

2016-10-07  Mark Ellis  <mark@mpellis.org.uk>

	* improve initialisation and error handling when passing a
  	  rapi file descriptor from dccm to client
	* tidy some variable initialisation warnings, check socket
	  permissions when passing rapi file descriptor
	* declare some inline functions in config.c to be static to
	  prevent some undefined ref errors
	* copy client file descriptor to/from socket message buffer
	  rather than direct assignment, per strict aliasing

2013-07-25  Mark Ellis  <mark@mpellis.org.uk>

	* 0.17 release

2012-08-21  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pkillall.c - report error codes from CeKillAllApps

2012-07-02  Mark Ellis  <mark@mpellis.org.uk>

	* remove obsolete hal code

2012-05-29  Mark Ellis  <mark@mpellis.org.uk>

	* fix type error in udev-synce-serial
	* 0.16 release

2011-12-30  Mark Ellis  <mark@mpellis.org.uk>

	* fix udev rules so rndis disconnects are recognised
	* make libgudev optional, send disconnect to dccm from udev